[package]
name = "rusty-bootstrapper"
version = "0.1.0"
authors = ["Henry Le Grys <henry@legrys.info>"]
edition = "2018"

[dependencies]
zip = { version = "0.5.9", default-features = false, features = ["deflate"] }
reqwest = { version = "0.10.10", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
iui = "0.3.0"
regex = "1"
