[package]
name = "rusty-bootstrapper"
version = "0.1.0"
authors = ["Henry Le Grys <henry@legrys.info>"]
edition = "2018"

[dependencies]
zip = { version = "0.5.9", default-features = false, features = ["deflate"] }
reqwest = { version = "0.10.10", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.5.2"
regex = "1"
byteorder = "1.3"
